--- a/pom.xml
+++ b/pom.xml
@@ -154,5 +154,10 @@
 			<artifactId>jdom</artifactId>
 			<version>2.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>4.3.0</version>
+		</dependency>
 	</dependencies>
 </project>
